[gd_scene load_steps=9 format=3 uid="uid://d1r271wcwgex6"]

[ext_resource type="Texture2D" uid="uid://wh86wnemjcnu" path="res://assets/sprites/roca_destruirse.png" id="1_bc8e5"]
[ext_resource type="Script" path="res://scripts/energy_rigd.gd" id="1_lf6fy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tsuic"]
atlas = ExtResource("1_bc8e5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xooag"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsuic")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Curve" id="Curve_c8pms"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_havxr"]
curve = SubResource("Curve_c8pms")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wxbws"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 63.84
initial_velocity_max = 107.17
gravity = Vector3(0, 200, 400)
scale_min = 0.5
scale_max = 1.5
scale_curve = SubResource("CurveTexture_havxr")
color = Color(0.45, 0.2475, 0, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_0n7oc"]
radius = 4.12311

[node name="RigidBody2D" type="RigidBody2D" groups=["rock"]]
collision_layer = 4
collision_mask = 5
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_lf6fy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_xooag")

[node name="GPUParticles2D" type="GPUParticles2D" parent="." groups=["rock"]]
scale = Vector2(0.597522, 1.76948)
emitting = false
process_material = SubResource("ParticleProcessMaterial_wxbws")
lifetime = 2.0
one_shot = true
explosiveness = 1.0
randomness = 0.18

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -1)
shape = SubResource("CircleShape2D_0n7oc")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="GPUParticles2D" to="." method="_on_gpu_particles_2d_finished"]
